[project]
name = "seo-preloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiojobs>=1.3.0",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "playwright>=1.50.0",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.0",
    "xmltodict>=0.14.2",
]
